--- a/Admin.NET/Admin.NET.Application/AppConfig.json
+++ b/Admin.NET/Admin.NET.Application/AppConfig.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=C:\\db\\Admin.NET.db",
-    "DefaultDbType": "Sqlite", // MySql、SqlServer、Sqlite、Oracle、PostgreSQL、Dm、Kdbndp、Oscar、MySqlConnector、Access
+    "DefaultConnection": "User ID=postgres;Password=myPassw0rd;Host=postgres-db;Port=5432;Database=admin_net_db;Pooling=false;",
+    "DefaultDbType": "PostgreSQL", // MySql、SqlServer、Sqlite、Oracle、PostgreSQL、Dm、Kdbndp、Oscar、MySqlConnector、Access
     "InitTable": true // 是否生成库表和种子数据
     //"DbConfigs": [
     //  {
