--- a/Vben2/.env.development
+++ b/Vben2/.env.development
@@ -15,7 +15,7 @@ VITE_DROP_CONSOLE = false
 VITE_GLOB_API_URL=/api
 
 # File upload address， optional
-VITE_GLOB_UPLOAD_URL=https://localhost:44363/api
+VITE_GLOB_UPLOAD_URL=https://localhost:44363/api/sys
 
 # Interface prefix
 VITE_GLOB_API_URL_PREFIX=
