--- a/etc/docker/docker-compose.infrastructure.yml
+++ b/etc/docker/docker-compose.infrastructure.yml
@@ -17,11 +17,11 @@ services:
     
   postgres-db:
     container_name: postgres-db
-    image: postgres:14.1
+    image: postgres:14.2
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_PASSWORD= "myPassw0rd"
+       POSTGRES_PASSWORD: myPassw0rd
     volumes:
       - postgres_data:/var/opt/postgres
     healthcheck:
@@ -32,16 +32,10 @@ services:
     networks: 
       - admin_net-network
   
-  pgadmin:
-    container_name: pgadmin_container
-    image: dpage/pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL= ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      - PGADMIN_DEFAULT_PASSWORD= ${PGADMIN_DEFAULT_PASSWORD:-admin}
+  adminer:
+    image: adminer
     ports:
-      - "${PGADMIN_PORT:-5050}:80"
-    volumes:
-       - pgadmin_data:/var/lib/pgadmin
+      - 5050:8080
     networks: 
       - admin_net-network
       
@@ -61,7 +55,6 @@ services:
       
 volumes:
   postgres_data:
-  pgadmin_data:
 
 networks:
   admin_net-network:
