--- a/services/demo/Entry/appsettings.Development.json
+++ b/services/demo/Entry/appsettings.Development.json
@@ -51,50 +51,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=myPassw0rd;Host=postgres-db;Port=5432;Database=demo_db;Pooling=false;",
     "DefaultDbType": "PostgreSQL", // MySql、SqlServer、Sqlite、Oracle、PostgreSQL、Dm、Kdbndp、Oscar、MySqlConnector、Access
-    "InitTable": true, // 是否生成库表和种子数据
-    //"DbConfigs": [
-    //  {
-    //    "DbConfigId": "Demo",
-    //    "DbType": "PostgreSQL",
-    //    "DbConnection": "User ID=postgres;Password=myPassw0rd;Host=postgres-db;Port=5432;Database=demo_db;Pooling=false;"
-    //  }
-    //]
+    "InitTable": true // 是否生成库表和种子数据
   },
   "Cache": {
     "CacheType": "RedisCache", // RedisCache
     "RedisConnectionString": "redis",
     "InstanceName": "zuo_"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "Wechat": {
-    //公众号
-    "WechatAppId": "",
-    "WechatAppSecret": "",
-    "EncodingAESKey": "",
-    "Token": "",
-    //小程序
-    "WxOpenAppId": "",
-    "WxOpenAppSecret": "",
-    "WxOpenToken": "",
-    "WxOpenEncodingAESKey": ""
-  },
-  "WechatPay": {
-    "AppId": "", // 微信公众平台AppId、开放平台AppId、小程序AppId、企业微信CorpId
-    "MerchantId": "", // 商户平台的商户号
-    "MerchantV3Secret": "", // 商户平台的APIv3密钥
-    "MerchantCertificateSerialNumber": "", // 商户平台的证书序列号
-    "MerchantCertificatePrivateKey": "\\WxPayCert\\apiclient_key.pem" // 商户平台的API证书私钥(apiclient_key.pem文件内容)
-  },
-  "PayCallBack": {
-    "WechatPayUrl": "/notify/weChatPay/unifiedorder", //微信支付回调
-    "WechatRefundUrl": "/notify/weChatPay/refund", //微信退款回调
-    "AlipayUrl": "", //支付宝支付回调
-    "AlipayRefundUrl": "" //支付宝退款回调
   }
 }
