--- a/services/demo/Entry/appsettings.json
+++ b/services/demo/Entry/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Serilog": {
+    "Properties": {
+      "ApplicationName": "Demo API"
+    },
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -23,6 +26,10 @@
           "rollingInterval": "Day",
           "outputTemplate": "【时间】{Timestamp:yyyy-MM-dd HH:mm:ss,fff}{NewLine}【等级】{Level:u3}{NewLine}【消息】{Message:lj}{NewLine}{NewLine}"
         }
+      },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5380" }
       }
     ]
   },
