--- a/backend/Admin.NET.Web.Entry/appsettings.json
+++ b/backend/Admin.NET.Web.Entry/appsettings.json
@@ -35,6 +35,7 @@
   "LowCodeConfig": [
     {
       "Name": "ORM对象",
+      "IsFrontend": false,
       "Source": {
         "File": "{HostPath}\\Template\\Entity.cs.cshtml"
       },
@@ -45,6 +46,7 @@
     },
     {
       "Name": "Service",
+      "IsFrontend": false,
       "Source": {
         "File": "{HostPath}\\Template\\Service.cs.cshtml"
       },
@@ -55,6 +57,7 @@
     },
     {
       "Name": "IService",
+      "IsFrontend": false,
       "Source": {
         "File": "{HostPath}\\Template\\IService.cs.cshtml"
       },
@@ -65,6 +68,7 @@
     },
     {
       "Name": "Input",
+      "IsFrontend": false,
       "Source": {
         "File": "{HostPath}\\Template\\Input.cs.cshtml"
       },
@@ -75,6 +79,7 @@
     },
     {
       "Name": "Output",
+      "IsFrontend": false,
       "Source": {
         "File": "{HostPath}\\Template\\Output.cs.cshtml"
       },
@@ -85,6 +90,7 @@
     },
     {
       "Name": "Dto",
+      "IsFrontend": false,
       "Source": {
         "File": "{HostPath}\\Template\\Dto.cs.cshtml"
       },
@@ -95,6 +101,7 @@
     },
     {
       "Name": "Mapper",
+      "IsFrontend": false,
       "Source": {
         "File": "{HostPath}\\Template\\Mapper.cs.cshtml"
       },
@@ -105,6 +112,7 @@
     },
     {
       "Name": "index",
+      "IsFrontend": true,
       "Source": {
         "File": "{HostPath}\\Template\\index.vue.cshtml"
       },
@@ -115,6 +123,7 @@
     },
     {
       "Name": "addForm",
+      "IsFrontend": true,
       "Source": {
         "File": "{HostPath}\\Template\\addForm.vue.cshtml"
       },
@@ -125,6 +134,7 @@
     },
     {
       "Name": "editForm",
+      "IsFrontend": true,
       "Source": {
         "File": "{HostPath}\\Template\\editForm.vue.cshtml"
       },
@@ -135,6 +145,7 @@
     },
     {
       "Name": "Manage",
+      "IsFrontend": true,
       "Source": {
         "File": "{HostPath}\\Template\\Manage.js.cshtml"
       },
