--- a/Web/package.json
+++ b/Web/package.json
@@ -10,7 +10,8 @@
 		"lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
 	},
 	"dependencies": {
-		"@element-plus/icons-vue": "^2.0.10",
+		"@element-plus/icons-vue": "^2.0.10",        
+		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.11",
 		"@microsoft/signalr": "^6.0.10",
 		"axios": "^1.1.3",
